// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bars [common] example testing should match snapshot(s) for Basic 1`] = `
<div
  style="padding-top:9rem"
>
  <svg
    height="400"
    width="750"
  >
    <g
      class="lucid-Bars"
    >
      <g>
        <rect
          class="lucid-Bar lucid-Bar-color-chart-3"
          height="36.363636363636374"
          width="28"
          x="1"
          y="363.6363636363636"
        />
        <rect
          class="lucid-Bar lucid-Bar-color-chart-0-darkest"
          height="72.72727272727275"
          width="28"
          x="29"
          y="327.27272727272725"
        />
        <rect
          class="lucid-Bar lucid-Bar-color-chart-2"
          height="109.09090909090907"
          width="28"
          x="57"
          y="290.90909090909093"
        />
        <rect
          class="lucid-Bar lucid-Bar-color-chart-4-lightest"
          height="181.81818181818184"
          width="28"
          x="85"
          y="218.18181818181816"
        />
        <g
          class="lucid-ContextMenu lucid-ToolTip"
        >
          <rect
            class="lucid-Bars-tooltip-hover-zone"
            height="181.81818181818184"
            width="114"
            x="0"
            y="218.18181818181816"
          />
        </g>
      </g>
      <g>
        <rect
          class="lucid-Bar lucid-Bar-color-chart-3"
          height="72.72727272727275"
          width="28"
          x="128"
          y="327.27272727272725"
        />
        <rect
          class="lucid-Bar lucid-Bar-color-chart-0-darkest"
          height="109.09090909090907"
          width="28"
          x="156"
          y="290.90909090909093"
        />
        <rect
          class="lucid-Bar lucid-Bar-color-chart-2"
          height="145.45454545454547"
          width="28"
          x="184"
          y="254.54545454545453"
        />
        <rect
          class="lucid-Bar lucid-Bar-color-chart-4-lightest"
          height="218.18181818181816"
          width="28"
          x="212"
          y="181.81818181818184"
        />
        <g
          class="lucid-ContextMenu lucid-ToolTip"
        >
          <rect
            class="lucid-Bars-tooltip-hover-zone"
            height="218.18181818181816"
            width="114"
            x="127"
            y="181.81818181818184"
          />
        </g>
      </g>
      <g>
        <rect
          class="lucid-Bar lucid-Bar-color-chart-3"
          height="72.72727272727275"
          width="28"
          x="255"
          y="327.27272727272725"
        />
        <rect
          class="lucid-Bar lucid-Bar-color-chart-0-darkest"
          height="145.45454545454547"
          width="28"
          x="283"
          y="254.54545454545453"
        />
        <rect
          class="lucid-Bar lucid-Bar-color-chart-2"
          height="181.81818181818184"
          width="28"
          x="311"
          y="218.18181818181816"
        />
        <rect
          class="lucid-Bar lucid-Bar-color-chart-4-lightest"
          height="218.18181818181816"
          width="28"
          x="339"
          y="181.81818181818184"
        />
        <g
          class="lucid-ContextMenu lucid-ToolTip"
        >
          <rect
            class="lucid-Bars-tooltip-hover-zone"
            height="218.18181818181816"
            width="114"
            x="254"
            y="181.81818181818184"
          />
        </g>
      </g>
      <g>
        <rect
          class="lucid-Bar lucid-Bar-color-chart-3"
          height="109.09090909090907"
          width="28"
          x="382"
          y="290.90909090909093"
        />
        <rect
          class="lucid-Bar lucid-Bar-color-chart-0-darkest"
          height="218.18181818181816"
          width="28"
          x="410"
          y="181.81818181818184"
        />
        <rect
          class="lucid-Bar lucid-Bar-color-chart-2"
          height="254.54545454545453"
          width="28"
          x="438"
          y="145.45454545454547"
        />
        <rect
          class="lucid-Bar lucid-Bar-color-chart-4-lightest"
          height="254.54545454545453"
          width="28"
          x="466"
          y="145.45454545454547"
        />
        <g
          class="lucid-ContextMenu lucid-ToolTip"
        >
          <rect
            class="lucid-Bars-tooltip-hover-zone"
            height="254.54545454545453"
            width="114"
            x="381"
            y="145.45454545454547"
          />
        </g>
      </g>
      <g>
        <rect
          class="lucid-Bar lucid-Bar-color-chart-3"
          height="145.45454545454547"
          width="28"
          x="509"
          y="254.54545454545453"
        />
        <rect
          class="lucid-Bar lucid-Bar-color-chart-0-darkest"
          height="290.90909090909093"
          width="28"
          x="537"
          y="109.09090909090908"
        />
        <rect
          class="lucid-Bar lucid-Bar-color-chart-2"
          height="327.2727272727273"
          width="28"
          x="565"
          y="72.7272727272727"
        />
        <rect
          class="lucid-Bar lucid-Bar-color-chart-4-lightest"
          height="290.90909090909093"
          width="28"
          x="593"
          y="109.09090909090908"
        />
        <g
          class="lucid-ContextMenu lucid-ToolTip"
        >
          <rect
            class="lucid-Bars-tooltip-hover-zone"
            height="327.2727272727273"
            width="114"
            x="508"
            y="72.7272727272727"
          />
        </g>
      </g>
      <g>
        <rect
          class="lucid-Bar lucid-Bar-color-chart-3"
          height="400"
          width="28"
          x="636"
          y="0"
        />
        <rect
          class="lucid-Bar lucid-Bar-color-chart-0-darkest"
          height="290.90909090909093"
          width="28"
          x="664"
          y="109.09090909090908"
        />
        <rect
          class="lucid-Bar lucid-Bar-color-chart-2"
          height="327.2727272727273"
          width="28"
          x="692"
          y="72.7272727272727"
        />
        <rect
          class="lucid-Bar lucid-Bar-color-chart-4-lightest"
          height="181.81818181818184"
          width="28"
          x="720"
          y="218.18181818181816"
        />
        <g
          class="lucid-ContextMenu lucid-ToolTip"
        >
          <rect
            class="lucid-Bars-tooltip-hover-zone"
            height="400"
            width="114"
            x="635"
            y="0"
          />
        </g>
      </g>
    </g>
  </svg>
  <svg
    height="400"
    width="750"
  >
    <g
      class="lucid-Bars"
    >
      <g>
        <rect
          class="lucid-Bar lucid-Bar-color-chart-3"
          height="12.121212121212125"
          width="114"
          x="0"
          y="387.8787878787879"
        />
        <rect
          class="lucid-Bar lucid-Bar-color-chart-0-darkest"
          height="24.24242424242425"
          width="114"
          x="0"
          y="363.6363636363636"
        />
        <rect
          class="lucid-Bar lucid-Bar-color-chart-2"
          height="36.363636363636374"
          width="114"
          x="0"
          y="327.27272727272725"
        />
        <rect
          class="lucid-Bar lucid-Bar-color-chart-4-lightest"
          height="60.606060606060566"
          width="114"
          x="0"
          y="266.6666666666667"
        />
        <g
          class="lucid-ContextMenu lucid-ToolTip"
        >
          <rect
            class="lucid-Bars-tooltip-hover-zone"
            height="133.33333333333331"
            width="114"
            x="0"
            y="266.6666666666667"
          />
        </g>
      </g>
      <g>
        <rect
          class="lucid-Bar lucid-Bar-color-chart-3"
          height="24.24242424242425"
          width="114"
          x="127"
          y="375.75757575757575"
        />
        <rect
          class="lucid-Bar lucid-Bar-color-chart-0-darkest"
          height="36.363636363636374"
          width="114"
          x="127"
          y="339.3939393939394"
        />
        <rect
          class="lucid-Bar lucid-Bar-color-chart-2"
          height="48.48484848484844"
          width="114"
          x="127"
          y="290.90909090909093"
        />
        <rect
          class="lucid-Bar lucid-Bar-color-chart-4-lightest"
          height="72.72727272727278"
          width="114"
          x="127"
          y="218.18181818181816"
        />
        <g
          class="lucid-ContextMenu lucid-ToolTip"
        >
          <rect
            class="lucid-Bars-tooltip-hover-zone"
            height="181.81818181818184"
            width="114"
            x="127"
            y="218.18181818181816"
          />
        </g>
      </g>
      <g>
        <rect
          class="lucid-Bar lucid-Bar-color-chart-3"
          height="24.24242424242425"
          width="114"
          x="254"
          y="375.75757575757575"
        />
        <rect
          class="lucid-Bar lucid-Bar-color-chart-0-darkest"
          height="48.4848484848485"
          width="114"
          x="254"
          y="327.27272727272725"
        />
        <rect
          class="lucid-Bar lucid-Bar-color-chart-2"
          height="60.606060606060566"
          width="114"
          x="254"
          y="266.6666666666667"
        />
        <rect
          class="lucid-Bar lucid-Bar-color-chart-4-lightest"
          height="72.72727272727275"
          width="114"
          x="254"
          y="193.93939393939394"
        />
        <g
          class="lucid-ContextMenu lucid-ToolTip"
        >
          <rect
            class="lucid-Bars-tooltip-hover-zone"
            height="206.06060606060606"
            width="114"
            x="254"
            y="193.93939393939394"
          />
        </g>
      </g>
      <g>
        <rect
          class="lucid-Bar lucid-Bar-color-chart-3"
          height="36.363636363636374"
          width="114"
          x="381"
          y="363.6363636363636"
        />
        <rect
          class="lucid-Bar lucid-Bar-color-chart-0-darkest"
          height="72.72727272727269"
          width="114"
          x="381"
          y="290.90909090909093"
        />
        <rect
          class="lucid-Bar lucid-Bar-color-chart-2"
          height="84.84848484848487"
          width="114"
          x="381"
          y="206.06060606060606"
        />
        <rect
          class="lucid-Bar lucid-Bar-color-chart-4-lightest"
          height="84.84848484848487"
          width="114"
          x="381"
          y="121.21212121212119"
        />
        <g
          class="lucid-ContextMenu lucid-ToolTip"
        >
          <rect
            class="lucid-Bars-tooltip-hover-zone"
            height="278.7878787878788"
            width="114"
            x="381"
            y="121.21212121212119"
          />
        </g>
      </g>
      <g>
        <rect
          class="lucid-Bar lucid-Bar-color-chart-3"
          height="48.4848484848485"
          width="114"
          x="508"
          y="351.5151515151515"
        />
        <rect
          class="lucid-Bar lucid-Bar-color-chart-0-darkest"
          height="96.96969696969697"
          width="114"
          x="508"
          y="254.54545454545453"
        />
        <rect
          class="lucid-Bar lucid-Bar-color-chart-2"
          height="109.09090909090907"
          width="114"
          x="508"
          y="145.45454545454547"
        />
        <rect
          class="lucid-Bar lucid-Bar-color-chart-4-lightest"
          height="96.96969696969698"
          width="114"
          x="508"
          y="48.484848484848484"
        />
        <g
          class="lucid-ContextMenu lucid-ToolTip"
        >
          <rect
            class="lucid-Bars-tooltip-hover-zone"
            height="351.5151515151515"
            width="114"
            x="508"
            y="48.484848484848484"
          />
        </g>
      </g>
      <g>
        <rect
          class="lucid-Bar lucid-Bar-color-chart-3"
          height="133.33333333333331"
          width="114"
          x="635"
          y="266.6666666666667"
        />
        <rect
          class="lucid-Bar lucid-Bar-color-chart-0-darkest"
          height="96.969696969697"
          width="114"
          x="635"
          y="169.6969696969697"
        />
        <rect
          class="lucid-Bar lucid-Bar-color-chart-2"
          height="109.0909090909091"
          width="114"
          x="635"
          y="60.606060606060595"
        />
        <rect
          class="lucid-Bar lucid-Bar-color-chart-4-lightest"
          height="60.606060606060595"
          width="114"
          x="635"
          y="0"
        />
        <g
          class="lucid-ContextMenu lucid-ToolTip"
        >
          <rect
            class="lucid-Bars-tooltip-hover-zone"
            height="400"
            width="114"
            x="635"
            y="0"
          />
        </g>
      </g>
    </g>
  </svg>
</div>
`;

exports[`Bars [common] example testing should match snapshot(s) for CustomColors 1`] = `
<div
  style="padding-top:9rem"
>
  <svg
    height="400"
    width="750"
  >
    <g
      class="lucid-Bars"
    >
      <g>
        <rect
          class="lucid-Bar lucid-Bar-color-chart-good"
          height="36.363636363636374"
          width="28"
          x="1"
          y="363.6363636363636"
        />
        <rect
          class="lucid-Bar lucid-Bar-color-chart-0-darkest"
          height="72.72727272727275"
          width="28"
          x="29"
          y="327.27272727272725"
        />
        <rect
          class="lucid-Bar lucid-Bar-color-chart-bad"
          height="109.09090909090907"
          width="28"
          x="57"
          y="290.90909090909093"
        />
        <rect
          class="lucid-Bar lucid-Bar-color-chart-4-lightest"
          height="181.81818181818184"
          width="28"
          x="85"
          y="218.18181818181816"
        />
        <g
          class="lucid-ContextMenu lucid-ToolTip"
        >
          <rect
            class="lucid-Bars-tooltip-hover-zone"
            height="181.81818181818184"
            width="114"
            x="0"
            y="218.18181818181816"
          />
        </g>
      </g>
      <g>
        <rect
          class="lucid-Bar lucid-Bar-color-chart-good"
          height="72.72727272727275"
          width="28"
          x="128"
          y="327.27272727272725"
        />
        <rect
          class="lucid-Bar lucid-Bar-color-chart-0-darkest"
          height="109.09090909090907"
          width="28"
          x="156"
          y="290.90909090909093"
        />
        <rect
          class="lucid-Bar lucid-Bar-color-chart-bad"
          height="145.45454545454547"
          width="28"
          x="184"
          y="254.54545454545453"
        />
        <rect
          class="lucid-Bar lucid-Bar-color-chart-4-lightest"
          height="218.18181818181816"
          width="28"
          x="212"
          y="181.81818181818184"
        />
        <g
          class="lucid-ContextMenu lucid-ToolTip"
        >
          <rect
            class="lucid-Bars-tooltip-hover-zone"
            height="218.18181818181816"
            width="114"
            x="127"
            y="181.81818181818184"
          />
        </g>
      </g>
      <g>
        <rect
          class="lucid-Bar lucid-Bar-color-chart-good"
          height="72.72727272727275"
          width="28"
          x="255"
          y="327.27272727272725"
        />
        <rect
          class="lucid-Bar lucid-Bar-color-chart-0-darkest"
          height="145.45454545454547"
          width="28"
          x="283"
          y="254.54545454545453"
        />
        <rect
          class="lucid-Bar lucid-Bar-color-chart-bad"
          height="181.81818181818184"
          width="28"
          x="311"
          y="218.18181818181816"
        />
        <rect
          class="lucid-Bar lucid-Bar-color-chart-4-lightest"
          height="218.18181818181816"
          width="28"
          x="339"
          y="181.81818181818184"
        />
        <g
          class="lucid-ContextMenu lucid-ToolTip"
        >
          <rect
            class="lucid-Bars-tooltip-hover-zone"
            height="218.18181818181816"
            width="114"
            x="254"
            y="181.81818181818184"
          />
        </g>
      </g>
      <g>
        <rect
          class="lucid-Bar lucid-Bar-color-chart-good"
          height="109.09090909090907"
          width="28"
          x="382"
          y="290.90909090909093"
        />
        <rect
          class="lucid-Bar lucid-Bar-color-chart-0-darkest"
          height="218.18181818181816"
          width="28"
          x="410"
          y="181.81818181818184"
        />
        <rect
          class="lucid-Bar lucid-Bar-color-chart-bad"
          height="254.54545454545453"
          width="28"
          x="438"
          y="145.45454545454547"
        />
        <rect
          class="lucid-Bar lucid-Bar-color-chart-4-lightest"
          height="254.54545454545453"
          width="28"
          x="466"
          y="145.45454545454547"
        />
        <g
          class="lucid-ContextMenu lucid-ToolTip"
        >
          <rect
            class="lucid-Bars-tooltip-hover-zone"
            height="254.54545454545453"
            width="114"
            x="381"
            y="145.45454545454547"
          />
        </g>
      </g>
      <g>
        <rect
          class="lucid-Bar lucid-Bar-color-chart-good"
          height="145.45454545454547"
          width="28"
          x="509"
          y="254.54545454545453"
        />
        <rect
          class="lucid-Bar lucid-Bar-color-chart-0-darkest"
          height="290.90909090909093"
          width="28"
          x="537"
          y="109.09090909090908"
        />
        <rect
          class="lucid-Bar lucid-Bar-color-chart-bad"
          height="327.2727272727273"
          width="28"
          x="565"
          y="72.7272727272727"
        />
        <rect
          class="lucid-Bar lucid-Bar-color-chart-4-lightest"
          height="290.90909090909093"
          width="28"
          x="593"
          y="109.09090909090908"
        />
        <g
          class="lucid-ContextMenu lucid-ToolTip"
        >
          <rect
            class="lucid-Bars-tooltip-hover-zone"
            height="327.2727272727273"
            width="114"
            x="508"
            y="72.7272727272727"
          />
        </g>
      </g>
      <g>
        <rect
          class="lucid-Bar lucid-Bar-color-chart-good"
          height="400"
          width="28"
          x="636"
          y="0"
        />
        <rect
          class="lucid-Bar lucid-Bar-color-chart-0-darkest"
          height="290.90909090909093"
          width="28"
          x="664"
          y="109.09090909090908"
        />
        <rect
          class="lucid-Bar lucid-Bar-color-chart-bad"
          height="327.2727272727273"
          width="28"
          x="692"
          y="72.7272727272727"
        />
        <rect
          class="lucid-Bar lucid-Bar-color-chart-4-lightest"
          height="181.81818181818184"
          width="28"
          x="720"
          y="218.18181818181816"
        />
        <g
          class="lucid-ContextMenu lucid-ToolTip"
        >
          <rect
            class="lucid-Bars-tooltip-hover-zone"
            height="400"
            width="114"
            x="635"
            y="0"
          />
        </g>
      </g>
    </g>
  </svg>
</div>
`;

exports[`Bars [common] example testing should match snapshot(s) for LogScale 1`] = `
<svg
  height="600"
  width="1000"
>
  <g>
    <g
      class="lucid-Bars"
    >
      <g>
        <rect
          class="lucid-Bar lucid-Bar-color-chart-3"
          height="66.66666666666669"
          width="150"
          x="0"
          y="333.3333333333333"
        />
        <g
          class="lucid-ContextMenu lucid-ToolTip"
        >
          <rect
            class="lucid-Bars-tooltip-hover-zone"
            height="66.66666666666669"
            width="150"
            x="0"
            y="333.3333333333333"
          />
        </g>
      </g>
      <g>
        <rect
          class="lucid-Bar lucid-Bar-color-chart-3"
          height="133.33333333333337"
          width="150"
          x="150"
          y="266.66666666666663"
        />
        <g
          class="lucid-ContextMenu lucid-ToolTip"
        >
          <rect
            class="lucid-Bars-tooltip-hover-zone"
            height="133.33333333333337"
            width="150"
            x="150"
            y="266.66666666666663"
          />
        </g>
      </g>
      <g>
        <rect
          class="lucid-Bar lucid-Bar-color-chart-3"
          height="200"
          width="150"
          x="300"
          y="200"
        />
        <g
          class="lucid-ContextMenu lucid-ToolTip"
        >
          <rect
            class="lucid-Bars-tooltip-hover-zone"
            height="200"
            width="150"
            x="300"
            y="200"
          />
        </g>
      </g>
      <g>
        <rect
          class="lucid-Bar lucid-Bar-color-chart-3"
          height="266.6666666666667"
          width="150"
          x="450"
          y="133.33333333333331"
        />
        <g
          class="lucid-ContextMenu lucid-ToolTip"
        >
          <rect
            class="lucid-Bars-tooltip-hover-zone"
            height="266.6666666666667"
            width="150"
            x="450"
            y="133.33333333333331"
          />
        </g>
      </g>
      <g>
        <rect
          class="lucid-Bar lucid-Bar-color-chart-3"
          height="333.33333333333337"
          width="150"
          x="600"
          y="66.66666666666666"
        />
        <g
          class="lucid-ContextMenu lucid-ToolTip"
        >
          <rect
            class="lucid-Bars-tooltip-hover-zone"
            height="333.33333333333337"
            width="150"
            x="600"
            y="66.66666666666666"
          />
        </g>
      </g>
    </g>
  </g>
  <g>
    <text
      fill="gray"
      text-anchor="middle"
      x="75"
      y="323.3333333333333"
    >
      10
    </text>
    <text
      fill="gray"
      text-anchor="middle"
      x="225"
      y="256.66666666666663"
    >
      100
    </text>
    <text
      fill="gray"
      text-anchor="middle"
      x="375"
      y="190"
    >
      1000
    </text>
    <text
      fill="gray"
      text-anchor="middle"
      x="525"
      y="123.33333333333331"
    >
      10000
    </text>
    <text
      fill="gray"
      text-anchor="middle"
      x="675"
      y="56.66666666666666"
    >
      100000
    </text>
  </g>
</svg>
`;
